--- a/src/app/core/component/auth/signup/signup.component.html
+++ b/src/app/core/component/auth/signup/signup.component.html
@@ -1,38 +1,33 @@
 <section
-  class="bg-slate-900 dark:bg-gray-900 bg-cover bg-center h-screen"
-  style="
-    background-image: url(../../../../../assets/img/p/img/johannes-plenio-qkfxBc2NQ18-unsplash.jpg);
-  "
+  class="bg-gradient-to-r from-blue-600 to-blue-300 h-screen flex items-center justify-center"
 >
   <div
-    class="flex-1 flex items-center justify-center h-screen space-x-16 p-4 rounded-lg duration-800 animate-slide-in-right"
+    class="text-black backdrop-blur-lg dark:bg-gray-800 dark:bg-opacity-60 animate-slide-in-right w-full max-w-lg bg-white bg-opacity-70 rounded-lg p-10 shadow-lg"
   >
-    <div
-      class="w-full h-full max-w-lg backdrop-blur-lg bg-gray-800 bg-opacity-30 rounded-lg p-10 text-black"
-    >
-      <div class="p-4 rounded-lg">
-        <div class="mt-5 space-y-2">
-          <h3 class="text-black text-2xl font-bold sm:text-3xl">Sign up</h3>
-          <p class="">
-            Already have an account?
-            <a
-              routerLink=""
-              class="font-medium text-indigo-600 hover:text-indigo-500"
-              >Log in</a
-            >
-          </p>
-        </div>
-      </div>
-     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="space-y-5">
+    <!-- <div class="space-y-4"> -->
+      <h3 class="sm:text-3xl text-black text-2xl font-bold mb-6 text-center">
+        Sign up
+      </h3>
+      <p class="">
+        Already have an account?
+        <a routerLink="" class="font-medium text-blue-800 hover:to-blue-500"
+          >Log in</a
+        >
+      </p>
 
-        <div>
-          <label class="font-medium">Name</label>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="space-y-2">
+        <!-- Name Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="name" class="font-medium">Name</label>
           <input
+            id="name"
             type="text"
             formControlName="name"
             required
             placeholder="Enter your name"
-            class="w-full mt-2 px-3 py-2 text-white bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600"
+            class="w-full mt-2 px-3 py-2 bg-transparent block p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
           />
           <div
             *ngIf="
@@ -42,24 +37,32 @@
           >
             <small
               *ngIf="signupForm.get('name')?.hasError('required')"
-              class="text-white"
-              >Name is required.</small
+              class="text-red-600"
             >
+              Name is required.
+            </small>
             <small
               *ngIf="signupForm.get('name')?.hasError('minlength')"
-              class="text-white"
-              >Name must be at least 2 characters long.</small
+              class="text-red-600"
             >
+              Name must be at least 2 characters long.
+            </small>
           </div>
         </div>
-        <div>
-          <label class="font-medium">Email</label>
+
+        <!-- Email Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="email" class="font-medium">Email</label>
           <input
+            id="email"
             type="email"
             formControlName="email"
             required
             placeholder="Enter your email"
-            class="w-full mt-2 px-3 py-2 text-white bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600"
+            class="mt-2 px-3 py-2 block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
+            (input)="convertToLowercase()"
           />
           <div
             *ngIf="
@@ -70,24 +73,31 @@
           >
             <small
               *ngIf="signupForm.get('email')?.hasError('required')"
-              class="text-white"
-              >Email is required.</small
+              class="text-red-600"
             >
+              Email is required.
+            </small>
             <small
               *ngIf="signupForm.get('email')?.hasError('email')"
-              class="text-white"
-              >Invalid email address.</small
+              class="text-red-600"
             >
+              Invalid email address.
+            </small>
           </div>
         </div>
-        <div>
-          <label class="font-medium">Password</label>
+
+        <!-- Password Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="password" class="font-medium">Password</label>
           <input
+            id="password"
             type="password"
             formControlName="password"
             required
             placeholder="Enter your password"
-            class="w-full mt-2 px-3 py-2 text-white bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600"
+            class="mt-2 px-3 py-2 bg-transparent block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
           />
           <div
             *ngIf="
@@ -98,24 +108,97 @@
           >
             <small
               *ngIf="signupForm.get('password')?.hasError('required')"
-              class="text-white"
-              >Password is required.</small
+              class="text-red-600"
             >
+              Password is required.
+            </small>
             <small
               *ngIf="signupForm.get('password')?.hasError('minlength')"
-              class="text-white"
-              >Password must be at least 6 characters long.</small
+              class="text-red-600"
             >
+              Password must be at least 6 characters long.
+            </small>
           </div>
         </div>
-        <div>
-          <label class="font-medium">Mobile</label>
+
+        <!-- Confirm Password Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="confirmPassword" class="font-medium"
+            >Re-enter Password</label
+          >
           <input
+            id="confirmPassword"
+            type="password"
+            formControlName="confirmPassword"
+            required
+            placeholder="Re-enter your password"
+            class="mt-2 px-3 py-2 bg-transparent block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
+          />
+          <div
+            *ngIf="
+              signupForm.get('confirmPassword')?.invalid &&
+              (signupForm.get('confirmPassword')?.dirty ||
+                signupForm.get('confirmPassword')?.touched)
+            "
+          >
+            <small
+              *ngIf="signupForm.get('confirmPassword')?.hasError('required')"
+              class="text-red-600"
+            >
+              Re-entering the password is required.
+            </small>
+            <small
+              *ngIf="signupForm.get('confirmPassword')?.hasError('mismatch')"
+              class="text-red-600"
+            >
+              Passwords do not match.
+            </small>
+          </div>
+        </div>
+
+        <!-- Date of Birth Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="dob" class="font-medium">Date of Birth</label>
+          <input
+            id="dob"
+            type="date"
+            formControlName="dob"
+            required
+            class="mt-2 px-3 py-2 bg-transparent block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
+          />
+          <div
+            *ngIf="
+              signupForm.get('dob')?.invalid &&
+              (signupForm.get('dob')?.dirty || signupForm.get('dob')?.touched)
+            "
+          >
+            <small
+              *ngIf="signupForm.get('dob')?.hasError('required')"
+              class="text-red-600"
+            >
+              Date of Birth is required.
+            </small>
+          </div>
+        </div>
+
+        <!-- Mobile Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="mobile" class="font-medium">Mobile</label>
+          <input
+            id="mobile"
             type="text"
             formControlName="mobile"
             required
             placeholder="Enter your mobile number"
-            class="w-full mt-2 px-3 py-2 text-white bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600"
+            pattern="[0-9]*"
+            inputmode="numeric"
+            class="mt-2 px-3 py-2 bg-transparent block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
           />
           <div
             *ngIf="
@@ -126,25 +209,36 @@
           >
             <small
               *ngIf="signupForm.get('mobile')?.hasError('required')"
-              class="text-white"
-              >Mobile number is required.</small
+              class="text-red-600"
             >
+              Mobile number is required.
+            </small>
+            <small
+              *ngIf="signupForm.get('mobile')?.hasError('pattern')"
+              class="text-red-600"
+            >
+              Please enter a valid mobile number.
+            </small>
             <small
               *ngIf="signupForm.get('mobile')?.hasError('minlength')"
-              class="text-white"
-              >Mobile number must be 10 digits long.</small
+              class="text-red-600"
             >
+              Mobile number must be 10 digits long.
+            </small>
           </div>
         </div>
-        <div>
-          <label class="font-medium">Gender</label>
+
+        <!-- Gender Field -->
+        <div
+          class="pt-[9px] pr-[10px] pb-[0px] pl-[5px] w-full sticky-field-container"
+        >
+          <label for="gender" class="font-medium">Gender</label>
           <select
+            id="gender"
             formControlName="gender"
             required
-            placeholder="select gender"
-            class="w-full mt-2 px-3 py-2 bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600 text-white"
+            class="mt-2 px-3 py-2 bg-transparent block w-full p-2.5 text-gray-800 transition-colors duration-300 bg-white border border-gray-300 rounded-lg shadow-sm outline-none dark:bg-gray-700 dark:text-white focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:border-gray-600"
           >
-            <!-- <option value="" disabled selected>Select Gender</option> -->
             <option value="male" class="text-black">Male</option>
             <option value="female" class="text-black">Female</option>
             <option value="other" class="text-black">Other</option>
@@ -158,67 +252,35 @@
           >
             <small
               *ngIf="signupForm.get('gender')?.hasError('required')"
-              class="text-white"
-              >Gender is required.</small
+              class="text-red-600"
             >
+              Gender is required.
+            </small>
           </div>
         </div>
 
-        <div>
-          <label class="font-medium">Date of Birth</label>
-          <input
-            type="date"
-            formControlName="dob"
-            required
-            placeholder="MM/DD/YYYY"
-            class="w-full mt-2 px-3 py-2 bg-transparent outline-none border shadow-sm rounded-lg focus:ring-1 focus:ring-amber-600 focus:border-amber-600 text-white"
-          />
-          <div
-            *ngIf="
-              signupForm.get('dob')?.invalid &&
-              (signupForm.get('dob')?.dirty || signupForm.get('dob')?.touched)
-            "
-          >
-            <small
-              *ngIf="signupForm.get('dob')?.hasError('required')"
-              class="text-white"
-              >Date of Birth is required.</small
-            >
-          </div>
-        </div>
-
+        <!-- Submit Button -->
         <button
-          id="createAccountButton"
-          class="w-full px-4 py-2 text-black bg-amber-600 font-medium rounded-lg text-sm text-center hover:bg-amber-800 transition-all duration-1000"
-          [disabled]="!isFormValid"
+          type="submit"
+          class="w-full px-4 py-2 mt-4 text-white bg-blue-600 rounded-lg shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
         >
-          Create account
+          Sign up
         </button>
       </form>
     </div>
-  </div>
+  <!-- </div> -->
   <!-- Toast Notification -->
   <div
     *ngIf="toastMessage"
-    class="fixed bottom-4 right-4 flex items-center w-64 max-w-xs p-4 space-x-4 rtl:space-x-reverse text-gray-500 bg-white divide-x rtl:divide-x-reverse divide-gray-200 rounded-lg shadow dark:text-gray-400 dark:divide-gray-700 dark:bg-gray-800"
-    role="alert"
+    class="fixed bottom-4 right-4 flex items-center w-64 max-w-xs p-4 space-x-4 text-white bg-blue-600 rounded-lg shadow-lg"
   >
-    <svg
-      class="w-5 h-5 text-blue-600 dark:text-blue-500 rotate-45"
-      aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 18 20"
+    <span class="material-icons"></span>
+    <p class="text-sm">{{ toastMessage }}</p>
+    <button
+      class="text-lg font-semibold text-white focus:outline-none"
+      (click)="toastMessage = ''"
     >
-      <path
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="m9 17 8 2L9 1 1 19l8-2Zm0 0V9"
-      />
-    </svg>
-    <div class="ps-7 text-sm font-normal">{{ toastMessage }}</div>
+      &times;
+    </button>
   </div>
-  
 </section>
