--- a/src/app/core/component/auth/signup/signup.component.css
+++ b/src/app/core/component/auth/signup/signup.component.css
@@ -14,3 +14,38 @@
     animation-duration: 0.8s; /* Adjust duration as needed */
     animation-fill-mode: both;
 }
+
+/* Add this to your styles */
+.sticky {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    inset-block-start: 0;
+    background-color: rgba(0, 0, 0, 0.8); /* Ensure it stands out */
+    z-index: 10;
+  }
+  
+  .sticky-field-container {
+    position: relative;
+    /* margin-block-end: 0.5rem; /* Adjust as needed to ensure space for error messages */
+  } 
+
+  .sticky-field-container small {
+    position: absolute;
+    inset-block-end: -1.2rem; /* Position the error message below the input field */
+    inset-inline-start: 0;
+    color: red; /* Adjust the color if needed */
+    font-size: 0.875rem; /* Adjust the font size */
+  }
+
+
+  .create-account-button:disabled {
+    cursor: not-allowed;
+    background-color: #ccc; /* Optional: Gray out the button */
+  }
+  
+  .create-account-button {
+    cursor: pointer; /* Normal cursor when enabled */
+    /* Other button styles */
+  }
+  
+
